--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://jobnexus-ai.onrender.com
-VITE_RESUME_API_URL=https://jobnexus-ai-1.onrender.com
+VITE_API_URL=http://localhost:5000
+VITE_FASTAPI_URL=http://localhost:8000
