--- a/fastapi_backend/requirements.txt
+++ b/fastapi_backend/requirements.txt
@@ -4,6 +4,8 @@ requests
 pydantic
 python-dotenv
 pymongo
+# Needed for mongodb+srv URIs
+dnspython
 docx2txt
 PyPDF2
 
@@ -11,7 +13,8 @@ PyPDF2
 langchain
 langchain-core
 langchain-google-genai
+# Underlying Google SDK used by langchain-google-genai
+google-generativeai
 
-# OPTIONAL but recommended:
-# These are for handling CORS and other production needs
+# For handling file uploads (multipart/form-data)
 python-multipart
