--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:5000
-VITE_FASTAPI_URL=http://localhost:8000
+VITE_API_URL=https://jobnexusai-a9lf.onrender.com
+VITE_FASTAPI_URL=https://jobnexus-fastapi.onrender.com
